<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.plans.PlansFragment">

    <Spinner
        android:id="@+id/muscle_group_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/exercise_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muscle_group_spinner" />

    <EditText
        android:id="@+id/weight_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:autofillHints="none"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toStartOf="@+id/repetitions_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_spinner" />

    <EditText
        android:id="@+id/repetitions_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/repeat"
        android:inputType="number"
        android:autofillHints="none"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toStartOf="@+id/sets_edit_text"
        app:layout_constraintStart_toEndOf="@+id/weight_edit_text"
        app:layout_constraintTop_toBottomOf="@id/exercise_spinner" />

    <EditText
        android:id="@+id/sets_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/approach"
        android:inputType="number"
        android:autofillHints="none"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repetitions_edit_text"
        app:layout_constraintTop_toBottomOf="@id/exercise_spinner" />


    <Button
        android:id="@+id/add_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_ex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_edit_text" />

    <EditText
        android:id="@+id/workoutNameEditText"
        android:layout_width="366dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name_workout"
        android:inputType="text"
        android:autofillHints="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_exercise_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workout_recycler_view"
        android:layout_width="360dp"
        android:layout_height="314dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/workout_list_description"
        app:layout_constraintBottom_toTopOf="@+id/save_workout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workoutNameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_workout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/save_workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
